# jprime

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  makefile
historical/: 3person  README.md  j.c  j2.c  j2.txt  jdeep.c
runs/: 2_10_count  2_11_count  2_12_count  2_13_count  2_14_count  2_15_count  2_16_count  2_17_count  2_18_count  2_19_count  2_19_super_count  2_20_super_count  2_3_count  2_4_count  2_5_count  2_6_count  2_72_36_c  2_74_37_c  2_76_38_c  2_78_39_c  2_7_count  2_80_40_c  2_8_count  2_9_count  3_10_108  3_10_count  3_10_super_count  3_11_149  3_11_super_count  3_12_200  3_13_263  3_14_337  3_15_s0  3_16_524  3_17_639  3_18_769  3_19_917  3_20_1082  3_21_s0  3_22_1469  (+108 more)
runs (completed)/: 3_20_1082  3_22_s1  3_23_s0  3_23_s1  3_24_s0  3_25_s1  3_26_s0  4_13_s0
runs (in progress)/: 3_23_1693  3_25_2207  3_28_118_s1  3_28_s1  3_29_s0  3_30_136_s0  3_30_s0  4_14_73_s0  4_14_s0  4_14_s0_enum  4_14_s0_g  4_15_91_s0  4_15_s0  5_12_s0  5_12_s0_enum  5_13_99_s0  5_13_s0  6_12_79_s0  6_12_81_s1  8_96_12_c
src/: Coordinator.cc  Coordinator.cpp  Coordinator.h  Coordinator.hpp  CoordinatorCPU.cc  CoordinatorCPU.h  CoordinatorCUDA.cu  CoordinatorCUDA.cuh  CoordinatorCuda.cu  GenLoopsIterative.cc  GenLoopsRecursive.cc  Graph.cc  Graph.h  JdeepStopException.hpp  Messages.h  Messages.hpp  Pattern.cc  Pattern.h  SearchConfig.cc  SearchConfig.h  SearchConfig.hpp  SearchContext.cc  SearchContext.h  SearchContext.hpp  SearchState.h  State.cc  State.h  WorkAssignment.cc  WorkAssignment.cpp  WorkAssignment.h  WorkAssignment.hpp  WorkCell.h  WorkSpace.h  Worker.cc  Worker.cpp  Worker.h  Worker.hpp  jdeep.cc  jdeep.cpp  jdeep.hpp  (+2 more)
src/common/: Coordinator.cc  Coordinator.h  Graph.cc  Graph.h  Pattern.cc  Pattern.h  SearchConfig.cc  SearchConfig.h  SearchContext.cc  SearchContext.h  State.cc  State.h  WorkAssignment.cc  WorkAssignment.h  WorkSpace.h
src/cpu/: CoordinatorCPU.cc  CoordinatorCPU.h  GenLoopsIterative.cc  GenLoopsRecursive.cc  Messages.h  WorkCell.h  Worker.cc  Worker.h
src/cuda/: CoordinatorCUDA.cc  CoordinatorCUDA.cu  CoordinatorCUDA.cuh  CoordinatorCUDA.h  CudaKernels.cu  CudaTypes.h
